--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.5"
+  },
+  "devDependencies": {
+    "sass": "^1.15.1"
   }
 }
