--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "popper.js": "^1.14.5"
   },
   "devDependencies": {
-    "sass": "^1.15.1"
+    "gulp": "^3.9.1",
+    "gulp-sass": "^4.0.2"
   }
 }
