--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.5"
+    "popper.js": "^1.14.5",
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "browser-sync": "^2.26.3",
@@ -21,6 +22,7 @@
     "gulp-clean": "^0.4.0",
     "gulp-file-include": "^2.0.1",
     "gulp-sass": "^4.0.2",
-    "gulp-uncss": "^1.0.6"
+    "gulp-uncss": "^1.0.6",
+    "ws": "3.3.2"
   }
 }
