--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.0",
-
-    "popper.js": "^1.14.5",
-    "font-awesome": "^4.7.0"
+    "popper.js": "^1.14.5"
   },
   "devDependencies": {
     "browser-sync": "^2.26.3",
